--- a/application/.gitignore
+++ b/application/.gitignore
@@ -1,4 +1,4 @@
-/app/tmp/*
-/app/Config/core.php
-/app/Config/database.php
-/vendors/*
+app/tmp/
+app/Config/core.php
+app/Config/database.php
+vendors/*
