--- a/application/.gitignore
+++ b/application/.gitignore
@@ -2,3 +2,10 @@ app/tmp/
 app/Config/core.php
 app/Config/database.php
 vendors/*
+
+.DS_Store
+app/Plugin
+app/Vendor
+app/reports
+app/Config/bootstrap/environments/production.php
+deploy/config/deploy/production.php
