--- a/application/app/composer.json
+++ b/application/app/composer.json
@@ -1,16 +1,28 @@
 {
-    "name": "php_ci_book/blogapp",
-    "authors": [
-        {
-            "name": "shoji k",
-            "email": "sample@sample.jp"
-        }
-    ],
-    "config": {
-      "vendor-dir": "Vendor"
-    },
-    "require": {
-        "cakephp/cakephp": "2.5.*",
-        "josegonzalez/cakephp-environments": "1.0.0"
+  "name": "php_ci_book/blogapp",
+  "authors": [
+    {
+      "name": "shoji k",
+      "email": "sample@sample.jp"
     }
+  ],
+  "config": {
+    "vendor-dir": "Vendor"
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git://github.com/sizuhiko/Bdd.git"
+    }
+  ],
+  "require": {
+    "cakephp/cakephp": "2.5.*",
+    "josegonzalez/cakephp-environments": "1.0.0"
+  },
+  "require-dev": {
+    "pear/console_commandline": "@dev",
+    "pear/pear_exception": "@dev",
+    "sizuhiko/Bdd": "dev-master",
+    "behat/mink-goutte-driver": "*"
+  }
 }
