--- a/application/app/composer.json
+++ b/application/app/composer.json
@@ -25,6 +25,7 @@
     "pear/pear_exception": "@dev",
     "sizuhiko/Bdd": "dev-master",
     "behat/mink-goutte-driver": "*",
-    "sizuhiko/fabricate": "1.*"
+    "sizuhiko/fabricate": "1.*",
+    "fzaninotto/faker": "1.4.*"
   }
 }
